LIVIJUKU-999 Tooltips (marked with question marks) of Kilpailutukset page on mobile devices fixed.

--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -30,6 +30,7 @@ $baseColors: (
   m: #888888, // gray,
   n: #009900, // etusivu green
   o: #dd8000, // etusivu orange
+  t: transparent,
   w: #ffffff, // white
   w08: rgba(#ffffff, 0.8)
 );
